--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/MatchTeams.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/MatchTeams.fxml
@@ -37,7 +37,7 @@
                         <Insets />
                      </HBox.margin>
                   </MFXButton>
-                  <HBox prefHeight="100.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
                   <MFXButton fx:id="btnStart" onAction="#onActionBtnStart" styleClass="mfx-button" stylesheets="@Style.css" text="Empezar" HBox.hgrow="ALWAYS">
                      <HBox.margin>
                         <Insets />
@@ -47,9 +47,9 @@
             </HBox>
          </children>
       </VBox>
-      <StackPane fx:id="stpWinnerTourney" prefHeight="150.0" prefWidth="200.0" visible="false" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="20.0">
+      <StackPane fx:id="stpWinnerTourney" prefHeight="150.0" prefWidth="200.0" visible="false" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="20.0">
          <children>
-            <ImageView fx:id="mgvWinnerStar" fitHeight="350.0" fitWidth="450.0" pickOnBounds="true" preserveRatio="true" styleClass="StarIcon" StackPane.alignment="CENTER" />
+            <ImageView fx:id="mgvWinnerStar" fitHeight="350.0" fitWidth="450.0" pickOnBounds="true" preserveRatio="true" styleClass="StarIcon" translateX="-30.0" translateY="-30.0" StackPane.alignment="CENTER" />
             <StackPane prefHeight="150.0" prefWidth="200.0">
                <children>
                   <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
@@ -74,5 +74,14 @@
             </StackPane>
          </children>
       </StackPane>
+      <MFXButton fx:id="btnCetificate" layoutX="219.0" layoutY="386.0" onAction="#onActionBtnCertificate" text="Imprimir Certificado" visible="false">
+         <graphic>
+            <VBox prefHeight="30.0" prefWidth="30.0">
+               <children>
+                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" styleClass="PrintIcon" />
+               </children>
+            </VBox>
+         </graphic>
+      </MFXButton>
    </children>
 </AnchorPane>
