--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/ViewTourneys.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/ViewTourneys.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -22,11 +21,7 @@
             </HBox>
             <VBox fx:id="imgTrophey" alignment="CENTER">
                <children>
-                  <ImageView fitHeight="107.0" fitWidth="109.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../resources/trophy.png" />
-                     </image>
-                  </ImageView>
+                  <ImageView fitHeight="107.0" fitWidth="109.0" pickOnBounds="true" preserveRatio="true" styleClass="TrophyIcon" />
                </children>
             </VBox>
             <HBox alignment="CENTER" prefHeight="50.0" spacing="40.0" styleClass="boxRose">
@@ -58,7 +53,7 @@
                   </MFXButton>
                   <MFXButton fx:id="btnPlay" onAction="#goPlay" text="Jugar">
                      <graphic>
-                        <ImageView fitHeight="39.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true" styleClass="StarIcon" />
+                        <ImageView fitHeight="39.0" fitWidth="39.0" pickOnBounds="true" preserveRatio="true" styleClass="VSIcon" />
                      </graphic>
                   </MFXButton>
                </children>
