--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/TourneysInfo.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/TourneysInfo.fxml
@@ -35,17 +35,15 @@
                </HBox>
                <HBox alignment="CENTER" spacing="30">
                   <VBox styleClass="InteractiveVBox" stylesheets="@Style.css">
-                     <ImageView fitHeight="40" fitWidth="40" preserveRatio="true" styleClass="GameIcon" />
+                     <ImageView fitHeight="40" fitWidth="40" preserveRatio="true" styleClass="GameIcon">
+                        <VBox.margin>
+                           <Insets />
+                        </VBox.margin></ImageView>
                   </VBox>
+                  <HBox prefHeight="25.0" prefWidth="30.0" />
                   <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Equipos:" />
                   <Label fx:id="lblTeams" styleClass="SmallLabel" stylesheets="@Style.css" text="Cantidad" />
-                  <MFXButton fx:id="btnShowTeams" styleClass="mfx-button" stylesheets="@Style.css" text="Ver Equipos">
-                     <graphic>
-                        <VBox styleClass="InteractiveVBox">
-                           <ImageView fitHeight="30" fitWidth="30" preserveRatio="true" styleClass="LookIcon" />
-                        </VBox>
-                     </graphic>
-                  </MFXButton>
+                  <HBox prefHeight="25.0" prefWidth="40.0" />
                </HBox>
                <HBox alignment="CENTER" spacing="30">
                   <VBox styleClass="InteractiveVBox" stylesheets="@Style.css">
@@ -69,10 +67,17 @@
                <padding>
                   <Insets bottom="20" left="20" right="20" top="20" />
                </padding>
-               <HBox alignment="CENTER" spacing="40">
+               <HBox alignment="CENTER">
                   <VBox styleClass="InteractiveVBox" stylesheets="@Style.css">
-                     <ImageView fitHeight="100" fitWidth="100" preserveRatio="true" styleClass="TrophyIcon" />
+                     <ImageView fitHeight="100" fitWidth="100" preserveRatio="true" styleClass="TrophyIcon">
+                        <VBox.margin>
+                           <Insets right="10.0" top="20.0" />
+                        </VBox.margin></ImageView>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
                   </VBox>
+                  <HBox prefHeight="100.0" prefWidth="60.0" />
                   <VBox alignment="CENTER" spacing="15">
                      <HBox alignment="CENTER" spacing="10">
                         <Label styleClass="LargeLabel" stylesheets="@Style.css" text="Nombre:" />
@@ -83,6 +88,7 @@
                         <Label fx:id="lblState" styleClass="SmallLabel" stylesheets="@Style.css" text="State" />
                      </HBox>
                   </VBox>
+                  <HBox prefHeight="100.0" prefWidth="120.0" />
                </HBox>
                <HBox alignment="CENTER" spacing="20">
                   <VBox styleClass="InteractiveVBox" stylesheets="@Style.css">
