--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/HistorialEquipos.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/HistorialEquipos.fxml
@@ -44,7 +44,11 @@
                                                 <!-- Lista de Equipos -->
                                                 <VBox alignment="CENTER" spacing="10.0" styleClass="InteractiveVBox" stylesheets="@Style.css">
                                                     <children>
-                                                        <Label styleClass="SmallLabel" stylesheets="@Style.css" text="Equipos" />
+                                                        <Label stylesheets="@Style.css" text="Equipos">
+                                             <styleClass>
+                                                <String fx:value="SmallLabel" />
+                                                <String fx:value="hbox-cute" />
+                                             </styleClass></Label>
                                                         <TableView fx:id="teamTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" styleClass="TableViewRose" stylesheets="@Style.css">
                                                             <columns>
                                                                 <TableColumn fx:id="teamNameColumn" prefWidth="150.0" text="Nombre" />
@@ -56,7 +60,11 @@
                                                 </VBox>
                                                 <VBox alignment="CENTER" spacing="10.0" styleClass="InteractiveVBox" stylesheets="@Style.css">
                                                     <children>
-                                                        <Label fx:id="selectedTeamLabel" styleClass="SmallLabel" stylesheets="@Style.css" text="Seleccioná un equipo" />
+                                                        <Label fx:id="selectedTeamLabel" stylesheets="@Style.css" text="Seleccioná un equipo">
+                                             <styleClass>
+                                                <String fx:value="SmallLabel" />
+                                                <String fx:value="hbox-cute" />
+                                             </styleClass></Label>
                                                         <TableView fx:id="tourneyTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" styleClass="TableViewLightdBlue" stylesheets="@Style.css">
                                                             <columns>
                                                                 <TableColumn fx:id="tourneyNameColumn" prefWidth="150.0" text="Nombre" />
@@ -88,21 +96,32 @@
                                             <children>
                                                 <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" styleClass="InteractiveVBox" stylesheets="@Style.css" HBox.hgrow="ALWAYS">
                                                     <children>
-                                                        <Label styleClass="SmallLabel" stylesheets="@Style.css" text="Rondas" />
+                                                        <Label stylesheets="@Style.css" text="Rondas">
+                                             <styleClass>
+                                                <String fx:value="SmallLabel" />
+                                                <String fx:value="hbox-cute" />
+                                             </styleClass></Label>
                                                         <Accordion fx:id="matchAccordion" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="Accordion" stylesheets="@Style.css" VBox.vgrow="ALWAYS" />
                                                     </children>
+                                       <padding>
+                                          <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                       </padding>
                                                 </VBox>
                                                 <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" styleClass="InteractiveVBox" stylesheets="@Style.css" HBox.hgrow="ALWAYS">
                                                     <children>
-                                                        <Label alignment="CENTER" styleClass="SmallLabel" stylesheets="@Style.css" text="Distribución de Goles por Ronda" />
-                                          <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="hbox-cute" stylesheets="@Style.css" VBox.vgrow="ALWAYS">
+                                                        <Label alignment="CENTER" stylesheets="@Style.css" text="Distribución de Goles por Ronda">
+                                             <styleClass>
+                                                <String fx:value="SmallLabel" />
+                                                <String fx:value="hbox-cute" />
+                                             </styleClass></Label>
+                                          <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="boxLightBlue" stylesheets="@Style.css" VBox.vgrow="ALWAYS">
                                              <children>
                                                               <Canvas fx:id="matchGoalsCanvas" height="150.0" width="200.0" />
                                              </children>
                                           </HBox>
                                                     </children>
                                        <padding>
-                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                          <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                        </padding>
                                                 </VBox>
                                             </children>
@@ -110,6 +129,9 @@
                                     </children>
                                 </VBox>
                             </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
                         </AnchorPane>
                     </content>
                 </Tab>
@@ -133,9 +155,9 @@
                                              </styleClass></Label>
                                                         <VBox spacing="5.0" styleClass="hbox-cute" stylesheets="@Style.css">
                                                             <children>
-                                                                <Label fx:id="totalPointsLabel" text="Puntos Totales: 0" />
-                                                                <Label fx:id="totalMatchesLabel" text="Partidos Jugados: 0" />
-                                                                <Label fx:id="generalRankingLabel" text="Ranking General: N/A" />
+                                                                <Label fx:id="totalPointsLabel" styleClass="SmallLabel" text="Puntos Totales: 0" />
+                                                                <Label fx:id="totalMatchesLabel" styleClass="SmallLabel" text="Partidos Jugados: 0" />
+                                                                <Label fx:id="generalRankingLabel" styleClass="SmallLabel" text="Ranking General: N/A" />
                                                             </children>
                                                         </VBox>
                                                         <Label stylesheets="@Style.css" text="Puntos por Partido (Global)">
