--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Game.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Game.fxml
@@ -85,5 +85,10 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </VBox>
+      <StackPane fx:id="stpDraw" prefHeight="342.0" prefWidth="600.0" visible="false">
+         <children>
+            <ImageView fx:id="mgvCoin" fitHeight="180.0" fitWidth="180.0" onMouseReleased="#onMouseReleasedMgvCoin" pickOnBounds="true" preserveRatio="true" />
+         </children>
+      </StackPane>
    </children>
 </AnchorPane>
