--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Game.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Game.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane fx:id="ncpRoot" prefHeight="410.0" prefWidth="600.0" styleClass="GameBackground" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.GameController">
    <children>
-      <VBox alignment="TOP_CENTER" prefHeight="560.0" prefWidth="760.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+      <VBox alignment="TOP_CENTER" layoutX="14.0" layoutY="15.0" prefHeight="560.0" prefWidth="760.0" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="26.0" AnchorPane.topAnchor="15.0">
          <children>
             <!-- Game Controls -->
             <Label style="-fx-font-weight: bold;" styleClass="boxRose" stylesheets="@Style.css" text="Marcador">
@@ -85,9 +85,9 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </VBox>
-      <StackPane fx:id="stpDraw" prefHeight="342.0" prefWidth="600.0" visible="false">
+      <StackPane fx:id="stpDraw" prefHeight="150.0" prefWidth="150.0" translateX="225.0" translateY="100.0" visible="false">
          <children>
-            <ImageView fx:id="mgvCoin" fitHeight="180.0" fitWidth="180.0" onMouseReleased="#onMouseReleasedMgvCoin" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="mgvCoin" fitHeight="150.0" fitWidth="150.0" onMouseReleased="#onMouseReleasedMgvCoin" pickOnBounds="true" preserveRatio="true" />
          </children>
       </StackPane>
    </children>
