--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/HistorialEquipos.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/HistorialEquipos.fxml
@@ -45,29 +45,31 @@
                                                 <VBox alignment="CENTER" spacing="10.0" styleClass="InteractiveVBox" stylesheets="@Style.css">
                                                     <children>
                                                         <Label stylesheets="@Style.css" text="Equipos">
-                                             <styleClass>
-                                                <String fx:value="SmallLabel" />
-                                                <String fx:value="hbox-cute" />
-                                             </styleClass></Label>
+                                                            <styleClass>
+                                                                <String fx:value="SmallLabel" />
+                                                                <String fx:value="hbox-cute" />
+                                                            </styleClass>
+                                                        </Label>
                                                         <TableView fx:id="teamTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" styleClass="TableViewRose" stylesheets="@Style.css">
                                                             <columns>
                                                                 <TableColumn fx:id="teamNameColumn" prefWidth="150.0" text="Nombre" />
                                                                 <TableColumn fx:id="teamRankingColumn" prefWidth="100.0" text="Ranking" />
                                                                 <TableColumn fx:id="teamPointsColumn" prefWidth="100.0" text="Puntos" />
                                                             </columns>
-                                             <columnResizePolicy>
-                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                             </columnResizePolicy>
+                                                            <columnResizePolicy>
+                                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                                            </columnResizePolicy>
                                                         </TableView>
                                                     </children>
                                                 </VBox>
                                                 <VBox alignment="CENTER" spacing="10.0" styleClass="InteractiveVBox" stylesheets="@Style.css">
                                                     <children>
                                                         <Label fx:id="selectedTeamLabel" stylesheets="@Style.css" text="Seleccioná un equipo">
-                                             <styleClass>
-                                                <String fx:value="SmallLabel" />
-                                                <String fx:value="hbox-cute" />
-                                             </styleClass></Label>
+                                                            <styleClass>
+                                                                <String fx:value="SmallLabel" />
+                                                                <String fx:value="hbox-cute" />
+                                                            </styleClass>
+                                                        </Label>
                                                         <TableView fx:id="tourneyTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" styleClass="TableViewLightdBlue" stylesheets="@Style.css">
                                                             <columns>
                                                                 <TableColumn fx:id="tourneyNameColumn" prefWidth="150.0" text="Nombre" />
@@ -76,9 +78,9 @@
                                                                 <TableColumn fx:id="tourneyStateColumn" prefWidth="100.0" text="Estado" />
                                                                 <TableColumn fx:id="tourneyPositionColumn" prefWidth="100.0" text="Posición" />
                                                             </columns>
-                                             <columnResizePolicy>
-                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                             </columnResizePolicy>
+                                                            <columnResizePolicy>
+                                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                                            </columnResizePolicy>
                                                         </TableView>
                                                     </children>
                                                 </VBox>
@@ -90,7 +92,6 @@
                         </AnchorPane>
                     </content>
                 </Tab>
-                <!-- Tab Partidos: Detalle de partidos del equipo con Accordion -->
                 <Tab text="Partidos">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="BusStopBackground" stylesheets="@Style.css">
@@ -103,45 +104,46 @@
                                                 <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" styleClass="InteractiveVBox" stylesheets="@Style.css" HBox.hgrow="ALWAYS">
                                                     <children>
                                                         <Label stylesheets="@Style.css" text="Rondas">
-                                             <styleClass>
-                                                <String fx:value="SmallLabel" />
-                                                <String fx:value="hbox-cute" />
-                                             </styleClass></Label>
+                                                            <styleClass>
+                                                                <String fx:value="SmallLabel" />
+                                                                <String fx:value="hbox-cute" />
+                                                            </styleClass>
+                                                        </Label>
                                                         <Accordion fx:id="matchAccordion" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="Accordion" stylesheets="@Style.css" VBox.vgrow="ALWAYS" />
                                                     </children>
-                                       <padding>
-                                          <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                                       </padding>
+                                                    <padding>
+                                                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                                    </padding>
                                                 </VBox>
                                                 <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" styleClass="InteractiveVBox" stylesheets="@Style.css" HBox.hgrow="ALWAYS">
                                                     <children>
                                                         <Label alignment="CENTER" stylesheets="@Style.css" text="Distribución de Goles por Ronda">
-                                             <styleClass>
-                                                <String fx:value="SmallLabel" />
-                                                <String fx:value="hbox-cute" />
-                                             </styleClass></Label>
-                                          <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="boxLightBlue" stylesheets="@Style.css" VBox.vgrow="ALWAYS">
-                                             <children>
-                                                              <Canvas fx:id="matchGoalsCanvas" height="150.0" width="200.0" />
-                                             </children>
-                                          </HBox>
+                                                            <styleClass>
+                                                                <String fx:value="SmallLabel" />
+                                                                <String fx:value="hbox-cute" />
+                                                            </styleClass>
+                                                        </Label>
+                                                        <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="boxLightBlue" stylesheets="@Style.css" VBox.vgrow="ALWAYS">
+                                                            <children>
+                                                                <Canvas fx:id="matchGoalsCanvas" height="150.0" width="200.0" />
+                                                            </children>
+                                                        </HBox>
                                                     </children>
-                                       <padding>
-                                          <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                                       </padding>
+                                                    <padding>
+                                                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                                    </padding>
                                                 </VBox>
                                             </children>
                                         </HBox>
                                     </children>
                                 </VBox>
                             </children>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
+                            <padding>
+                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                            </padding>
                         </AnchorPane>
                     </content>
                 </Tab>
-                <!-- Tab Estadísticas: Estadísticas generales y por torneo -->
                 <Tab text="Estadísticas">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="PurpleBackground" stylesheets="@Style.css">
@@ -151,39 +153,55 @@
                                         <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="title-bar" stylesheets="@Style.css" text="Estadísticas del equipo" />
                                         <SplitPane dividerPositions="0.5" prefHeight="200.0" prefWidth="200.0" styleClass="BusStopBackground" stylesheets="@Style.css" VBox.vgrow="ALWAYS">
                                             <items>
-                                                <!-- Estadísticas Generales -->
                                                 <VBox alignment="CENTER" spacing="10.0">
                                                     <children>
                                                         <Label stylesheets="@Style.css" text="Estadísticas Generales">
-                                             <styleClass>
-                                                <String fx:value="SmallLabel" />
-                                                <String fx:value="hbox-cute" />
-                                             </styleClass></Label>
+                                                            <styleClass>
+                                                                <String fx:value="SmallLabel" />
+                                                                <String fx:value="hbox-cute" />
+                                                            </styleClass>
+                                                        </Label>
                                                         <VBox spacing="5.0" styleClass="hbox-cute" stylesheets="@Style.css">
                                                             <children>
                                                                 <Label fx:id="totalPointsLabel" styleClass="SmallLabel" text="Puntos Totales: 0" />
                                                                 <Label fx:id="totalMatchesLabel" styleClass="SmallLabel" text="Partidos Jugados: 0" />
                                                                 <Label fx:id="generalRankingLabel" styleClass="SmallLabel" text="Ranking General: N/A" />
+                                                                <Label fx:id="tournamentsLabel" styleClass="SmallLabel" text="Torneos Participados: 0" />
                                                             </children>
                                                         </VBox>
-                                                        <Label stylesheets="@Style.css" text="Puntos por Partido (Global)">
-                                             <styleClass>
-                                                <String fx:value="SmallLabel" />
-                                                <String fx:value="hbox-cute" />
-                                             </styleClass></Label>
+                                                        <Label stylesheets="@Style.css" text="Puntos por Torneo (Global)">
+                                                            <styleClass>
+                                                                <String fx:value="SmallLabel" />
+                                                                <String fx:value="hbox-cute" />
+                                                            </styleClass>
+                                                        </Label>
                                                         <ScrollPane fitToHeight="true" pannable="true">
-                                                            <Canvas fx:id="pointsPerMatchCanvas" height="200.0" />
+                                                            <content>
+                                                                <Canvas fx:id="pointsPerMatchCanvas" height="200.0" />
+                                                            </content>
+                                                        </ScrollPane>
+                                                        <!-- Nueva gráfica de ranking global -->
+                                                        <Label stylesheets="@Style.css" text="Ranking Global (Mismo Deporte)">
+                                                            <styleClass>
+                                                                <String fx:value="SmallLabel" />
+                                                                <String fx:value="hbox-cute" />
+                                                            </styleClass>
+                                                        </Label>
+                                                        <ScrollPane fitToHeight="true" pannable="true">
+                                                            <content>
+                                                                <Canvas fx:id="globalRankingCanvas" height="200.0" />
+                                                            </content>
                                                         </ScrollPane>
                                                     </children>
                                                 </VBox>
-                                                <!-- Estadísticas por Torneo -->
                                                 <VBox alignment="CENTER" spacing="10.0">
                                                     <children>
                                                         <Label stylesheets="@Style.css" text="Estadísticas por Torneo">
-                                             <styleClass>
-                                                <String fx:value="SmallLabel" />
-                                                <String fx:value="hbox-cute" />
-                                             </styleClass></Label>
+                                                            <styleClass>
+                                                                <String fx:value="SmallLabel" />
+                                                                <String fx:value="hbox-cute" />
+                                                            </styleClass>
+                                                        </Label>
                                                         <TableView fx:id="tourneyStatsTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" styleClass="TableViewLightdBlue">
                                                             <columns>
                                                                 <TableColumn fx:id="tourneyStatsNameColumn" prefWidth="100.0" text="Torneo" />
@@ -192,13 +210,16 @@
                                                                 <TableColumn fx:id="tourneyStatsRankingColumn" prefWidth="80.0" text="Ranking" />
                                                             </columns>
                                                         </TableView>
-                                                        <Label stylesheets="@Style.css" text="Puntos por Partido (por Torneo)">
-                                             <styleClass>
-                                                <String fx:value="SmallLabel" />
-                                                <String fx:value="hbox-cute" />
-                                             </styleClass></Label>
+                                                        <Label stylesheets="@Style.css" text="Goles por Ronda (por Torneo)">
+                                                            <styleClass>
+                                                                <String fx:value="SmallLabel" />
+                                                                <String fx:value="hbox-cute" />
+                                                            </styleClass>
+                                                        </Label>
                                                         <ScrollPane fitToHeight="true" pannable="true">
-                                                            <Canvas fx:id="tourneyPointsPerMatchCanvas" height="200.0" />
+                                                            <content>
+                                                                <Canvas fx:id="tourneyPointsPerMatchCanvas" height="200.0" />
+                                                            </content>
                                                         </ScrollPane>
                                                     </children>
                                                 </VBox>
