--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Game.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/Game.fxml
@@ -38,7 +38,7 @@
                      <children>
                         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <Label fx:id="lblFirstTeam" text="Label">
+                              <Label fx:id="lblNameFirstTeam" text="Label">
                                  <styleClass>
                                     <String fx:value="SmallLabel" />
                                     <String fx:value="hbox-cute" />
@@ -61,7 +61,7 @@
                      <children>
                         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <Label fx:id="lblSecondTeam" text="Label">
+                              <Label fx:id="lblNameSecondTeam" text="Label">
                                  <styleClass>
                                     <String fx:value="SmallLabel" />
                                     <String fx:value="hbox-cute" />
@@ -107,12 +107,12 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </VBox>
-      <StackPane fx:id="stpDraw" prefHeight="150.0" prefWidth="150.0" translateX="220.0" translateY="100.0" visible="false">
+      <StackPane fx:id="stpDraw" prefHeight="350.0" prefWidth="600.0" visible="false">
          <children>
-            <VBox fx:id="txfNumberTeam" accessibleText="Número del Equipo" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" StackPane.alignment="CENTER">
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" StackPane.alignment="CENTER">
                <children>
-                  <MFXTextField alignment="CENTER" minWidth="-Infinity" prefWidth="125.0" promptText="Número del Equipo" stylesheets="@Style.css" />
-                  <ImageView fx:id="mgvCoin" fitHeight="150.0" fitWidth="150.0" onMousePressed="#onMousePressedMgvCoin" pickOnBounds="true" preserveRatio="true" />
+                  <MFXTextField fx:id="txfNumberTeam" alignment="CENTER" minWidth="-Infinity" prefWidth="125.0" promptText="Número del Equipo" stylesheets="@Style.css" />
+                  <ImageView fx:id="mgvCoin" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </VBox>
          </children>
